crates/keron-lang/tests/corpus/errors/check/map_double_key.keron
val m: Map<Double, Int> = {}
